[tool.poetry]
name = "dating-bot"
version = "0.1.0"
description = "Telegram dating bot system"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src/api" },
    { include = "src/bot" },
    { include = "src/worker" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aiogram = {extras = ["redis"], version = "^3.20.0.post0"}
aiohttp = "^3.9.3"
redis = "^5.0.3"
asyncpg = "^0.29.0"
aio-pika = "^9.3.0"
pydantic = "^2.7.0"
minio = "^7.2.5"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
